fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,7 @@
 html {
   scroll-behavior: smooth;
 }
+
+html {
+  overflow-y: scroll;
+}
