--- a/src/Components/Sidebar/style.module.css
+++ b/src/Components/Sidebar/style.module.css
@@ -90,6 +90,6 @@ button {
 
 @media screen and (max-width: 1200px) {
   .sidebar {
-    margin-top: 3em;
+    margin-top: 2em;
   }
 }
